name:                marchingCubes
version:             0.1.0.0
homepage:            https://github.com/stla/marchingCubes#readme
license:             GPL-3
author:              Stéphane Laurent
maintainer:          laurent_step@yahoo.fr
copyright:           2019 Stéphane Laurent
category:            Algorithm
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     MarchingCubes.Utils
                     , MarchingCubes.Tables
                     , MarchingCubes.Internal
                     , MarchingCubes.MarchingCubes
                     , MarchingCubes.Mesh
                     , MarchingCubes
                     , OpenGL.SpiderCage
                     , OpenGL.BarthSextic
                     , Colors.Palettes
                     , Colors.ColorRamp
  build-depends:       base >= 4.7 && < 5
                     , matrix
                     , vector
                     , array
                     , extra
                     , split
                     , linear
                     , containers
                     , OpenGL
                     , GLUT
                     , numeric-tools
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/stla/marchingCubes
